# Yahuu

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_client.sh  test_peachdb  test_peachdb.c
peachdata/: index.mpdb
peachdata/collections/: user.lpdb  users.lpdb
shared/: protocol.h
src/client/: main.c
src/client/controllers/loginController/: loginController.c  loginController.h
src/client/controllers/registerController/: registerController.c  registerController.h
src/client/services/authService/: authService.c  authService.h
src/client/services/groupService/: groupService.c  groupService.h
src/client/services/messageService/: messageService.c  messageService.h
src/client/services/networkService/: networkService.c  networkService.h
src/client/utils/colors/: colors.h
src/client/utils/constants/: constants.h
src/client/utils/debugger/: debugger.c  debugger.h
src/client/utils/fonts/: fonts.c  fonts.h
src/client/utils/states/: states.c  states.h
src/client/utils/utils/: utils.c  utils.h
src/client/views/components/: components.c  components.h
src/client/views/screenManager/: screenManager.c  screenManager.h
src/client/views/screens/chatScreen/: chatScreen.c  chatScreen.h
src/client/views/screens/loginScreen/: loginScreen.c  loginScreen.h
src/client/views/screens/registerScreen/: registerScreen.c  registerScreen.h
src/server/: main.c  server.c
src/server/models/usermodel/: userModel.c  userModel.h
src/server/old/: database.c
src/server/services/groupService/: groupService.c  groupService.h
src/server/services/messageService/: messageService.c  messageService.h
src/server/services/peachdb/: peachdb.c  peachdb.h
src/server/services/peachdb/functions/debugger/: debugger.c  debugger.h
src/server/services/peachdb/functions/files/: files.c  files.h
src/server/services/sessionManager/: sessionManager.c  sessionManager.h
src/server/services/socketService/: socketService.c  socketService.h
src/server/services/userService/: userService.c  userService.h
